# scop3p-api-client

./: .gitignore  AUTHORS.md  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pr-main-ci.yml
docs/: _config.yml  examples.md  getting-started.md  index.md  methodology.md  python-api.md
docs/_includes/: footer.html
examples/: output_formats_demo.py
src/scop3p_api_client/: __init__.py  api.py  cli.py  output.py  result.py  sorting.py
tests/: test_api.py  test_cli.py  test_main.py  test_output.py  test_result.py  test_sorting.py
